Make sure headers wrap when edit link in it

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,6 +80,10 @@ strong {
     right: 0;
     bottom: 13px;
   }
+  h1, h2 {
+    padding-right: 175px;
+  }
+
 }
 
 textarea {
